# decp-processing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  playground.py  pyproject.toml  run_flow.py  template.env
.github/workflows/: tag-release.yml  test.yaml
data/: code_officiel_geographique.parquet  datasets_reference.json  datasets_reference_test.json  decp_test.json  departements_regions.parquet  schema_base.json  source_datasets.json
data/system/: processed_bookmarks.json
docs/superpowers/plans/: 2026-04-25-rationalisation-montants-anormaux.md  2026-05-15-geocodage-quotidien-sirets.md
docs/superpowers/specs/: 2026-04-25-montants-anormaux-rationalisation-design.md
notebooks/: stats.ipynb
reference/: schema_base.json  source_datasets.json
script/: calibrate_anomaly_thresholds.py  check_imports.py  docker_build_and_run.bat  docker_run.bat  start_server_in_docker.sh
src/: config.py  deploy.py  deployments.py  flows.py  playground.py  schemas.py
src/flows/: decp_processing.py  get_cog.py  scrap.py  sirene_preprocess.py
src/tasks/: analyse.py  anomaly.py  bookmarking.py  cache_management.py  clean.py  dataset_utils.py  detect_format.py  enrich.py  geocode.py  get.py  output.py  publish.py  scrap.py  setup.py  transform.py  utils.py
src/tasks/scrap/: aws.py  dume.py  klekoon.py  marches_securises.py
tests/: conftest.py  test_anomaly.py  test_clean.py  test_enrich.py  test_geocode.py  test_get.py  test_main.py  test_sirene_preprocess.py  test_stats.py  test_transform.py
tests/data/: datasets_reference_test.json  decp_test_2019.json  decp_test_2022.json  identifiants-communes-test.csv  source_datasets_test.json
tests/data/sirene/: etablissements.json  etablissements.parquet  unites_legales.json  unites_legales.parquet
