[project]
name = "decp-processing"
description = "Traitement des données des marchés publics français."
version = "2.4.2"
requires-python = ">= 3.9"
authors = [
    { name = "Colin Maudry", email = "colin+decp@maudry.com" }
]
dependencies = [
    "python-dotenv",
    "pandas", # nécessaire pour l'écriture en base de données
    "polars==1.33.1",
    "pyarrow",
    "frictionless",
    "ipykernel",
    "prefect==3.4.17",
    "orjson",
    "ijson==3.4.0",
    "lxml",
    "psycopg2",
    "bs4",
    "selenium",
    "polars_ds",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-env",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env = [
    "DATASETS_REFERENCE_FILEPATH=tests/data/source_datasets_test.json",
    "PREFECT_API_URL=",
    "DECP_PROCESSING_PUBLISH=",
    "PREFECT_TASKS_REFRESH_CACHE=true"
]
addopts = "-p no:warnings"

[tool.prefect]
logging.level = "INFO"
