[project]
name = "decp-processing"
description = "Traitement des données des marchés publics français."
version = "2.6.3"
requires-python = ">= 3.9"
authors = [
    { name = "Colin Maudry", email = "colin+decp@maudry.com" }
]
dependencies = [
    "python-dotenv",
    "pandas", # nécessaire pour l'écriture en base de données
    "polars==1.35.2",
    "pyarrow",
    "frictionless",
    "ipykernel",
    "prefect==3.6.6",
    "prefect[email]==3.6.6",
    "orjson",
    "ijson==3.4.0",
    "lxml",
    "psycopg2",
    "bs4",
    "selenium",
    "polars_ds",
    "scikit-learn",
    "tenacity"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-env",
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env = [
    "DATASETS_REFERENCE_FILEPATH=tests/data/source_datasets_test.json",
    "SIRENE_DATA_DIR=tests/data/sirene",
    "PREFECT_API_URL=",
    "DECP_PROCESSING_PUBLISH=",
    "DECP_USE_CACHE=false"
]
addopts = "-p no:warnings"

[tool.prefect]
logging.level = "INFO"
